--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -8,3 +8,12 @@
           =icon('far', 'edit')
         =link_to "#",class:"Side__header--box_logo-btn Side__header--box_logo-btn_cog "do
           =icon('fas', 'cog')
+  .Side__group
+    .Side__group__list
+      .groupname
+        tesut
+      .latest-message 
+        mada
+    .Side__group__list
+      .groupname
+      .latest-message
