--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -8,11 +8,11 @@
   background-color: #2f3e51;
   width: 300px;
   height: 100vh;
+  font-weight: bold;
+  color: white;
     &__header{
-    color: white;
     height: 100px;
     display: flex;
-  
     align-items: center;
     background-color: #253141;
       &--box{
@@ -21,7 +21,9 @@
         justify-content: space-between;
         width: 260px;
         height: 20px;
-
+          &_name{
+            font-size: 16px;
+          }
           &_logo{
             width: 60px;
               &-btn{
@@ -33,6 +35,19 @@
 
               }
           }
+      }
+    }
+    &__group{
+      &__list{
+        height: 65px;
+        padding: 20px 20px 40px 20px;
+        .groupname{
+          font-size: 15px;
+          margin-bottom: 6px;
+        }
+        .latest_message{
+          font-size: 11px;
+        }
       }
     }
   }
@@ -49,11 +64,11 @@
     }
     &__main{
       height: calc(100vh - 190px);
-      background-color: ivory;
+      background-color: #fafafa;
     }
     &__footer{
       height: 90px;
-      background-color: gray;
+      background-color: #d2d2d2;
     }
 
 }
