--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,4 +1,9 @@
 .Main
   .Main__header
+    .Main__header__left
+      .Main__header__left__name
+        test
+    .Main__header__right
+      
   .Main__main
   .Main__footer
