--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -3,7 +3,11 @@
     .Main__header__left
       .Main__header__left__name
         test
+        .member_name
+          takasi
     .Main__header__right
-      
+      =link_to "#", class:"Main__header__right__edit"do
+        edit
   .Main__main
+    
   .Main__footer
