--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -61,11 +61,36 @@
       border-bottom: 1px solid #eeeeee;
       height: 100px;
       background-color: #ffffff;
+      display: flex;
+      justify-content: space-between;
+        &__left{
+          color: #333333;
+          padding: 35px 0px 0px 40px;
+            &__name{
+              font-size: 20px;
+                .member_name{
+                  color: #999999;
+                  font-size: 12px;
+                }
+            }
+        }
+        &__right{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+              &__edit{
+                text-decoration: #38aef0;
+                font-size: 16px;
+                padding-right: 60px;
+              }
+        }
     }
+
     &__main{
       height: calc(100vh - 190px);
       background-color: #fafafa;
     }
+
     &__footer{
       height: 90px;
       background-color: #d2d2d2;
