--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -79,16 +79,37 @@
             justify-content: center;
             align-items: center;
               &__edit{
-                text-decoration: #38aef0;
+                text-decoration: none;
+                color: #38aef0;
                 font-size: 16px;
-                padding-right: 60px;
+                margin-right: 60px;
+                padding: 12px 20px;
+                border: double 1px #38aef0;
               }
         }
     }
 
     &__main{
+      font-weight: bold;
       height: calc(100vh - 190px);
       background-color: #fafafa;
+      padding: 35px 0px 40px 12px;
+        &__name{
+            padding-bottom: 12px;
+            color: #333333;
+            font-size: 16px;
+            display: flex;
+            .date{
+              color: #999999;
+              font-size: 12px;
+              margin-left: 5px;
+            }
+        }
+        &__message{
+          color: #434a54;
+          font-size: 14px;
+          margin-bottom: 46px;
+        }
     }
 
     &__footer{
