--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,5 +9,17 @@
       =link_to "#", class:"Main__header__right__edit"do
         edit
   .Main__main
-    
+    .Main__main__name
+      yuki
+      .date
+        202020202020
+    .Main__main__message
+      コンチわーーー
+    .Main__main__name
+      yuki
+      .date
+        202020202020
+    .Main__main__message
+      コンチわーーー          
   .Main__footer
+  
