--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -22,4 +22,10 @@
     .Main__main__message
       コンチわーーー          
   .Main__footer
-  
+    .Main__footer__form
+      .input-box
+        %input{type: "text", class:"input-box__text", placeholder: "type a message"}
+          %label{class: "input-box__text__image"}
+            = icon('fas', 'image', class:"input-box__text__image__icon")
+            %input{type: "file",class:"input-box__text__image__file"}
+      %input{type:"submit", class:"Main__footer__form__send", value:"Send"}
