--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -115,6 +115,39 @@
     &__footer{
       height: 90px;
       background-color: #d2d2d2;
+      &__form{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 10px 40px 0 50px;
+          .input-box{
+            position: relative;
+            width: 100%;
+              &__text{
+                height: 50px;
+                width: 100%;
+                  &__image{
+                    position: absolute;
+                    right: 10px;   
+                    top: 15px;
+                    
+                    &__file{
+                      display: none;
+                    }
+                    }                                  
+                  }
+              }
+          
+          &__send{
+            background-color: #38aef0;
+            color: #ffffff;
+            font-size: 16px;
+            margin-right: 40px;
+            margin-left: 10px;
+            height: 50px;
+            padding: 0 30px;
+          }
+          }
+      }
     }
 
-}
