--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,7 +4,7 @@
       .Side__header--box_name
         = current_user.name
       .Side__header--box_logo
-        =link_to "#",class:"Side__header--box_logo-btn Side__header--box_logo-btn_edit"do
+        =link_to new_group_path(current_user),class:"Side__header--box_logo-btn Side__header--box_logo-btn_edit"do
           =icon('far', 'edit')
         =link_to edit_user_path(current_user),class:"Side__header--box_logo-btn Side__header--box_logo-btn_cog "do
           =icon('fas', 'cog')
