group.error viwes

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -16,9 +16,9 @@
     .Main__main__message
       コンチわーーー
     .Main__main__name
-      yuki
+      =current_user.name
       .date
-        202020202020
+        =User.created_at
     .Main__main__message
       コンチわーーー          
   .Main__footer
