--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -44,9 +44,13 @@
         .groupname{
           font-size: 15px;
           margin-bottom: 6px;
+          text-decoration: none;
+        color: #ffffff;
         }
         .latest_message{
           font-size: 11px;
+          text-decoration: none;
+          color: #ffffff;
         }
       }
     }
