--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -11,7 +11,7 @@
   .Side__group
     .Side__group__list
       - current_user.groups.each do |group|
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .groupname
             = group.name
           .latest-message 
