--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -15,5 +15,5 @@
           .groupname
             = group.name
           .latest-message 
-            mada
+            = group.show_last_message
     
