--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -39,6 +39,7 @@
     }
     &__group{
       &__list{
+        text-decoration: none;
         height: 65px;
         padding: 20px 20px 40px 20px;
         .groupname{
@@ -47,7 +48,7 @@
           text-decoration: none;
         color: #ffffff;
         }
-        .latest_message{
+        .latest-message {
           font-size: 11px;
           text-decoration: none;
           color: #ffffff;
