非同期通信完了しました

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -9,11 +9,12 @@
         =link_to edit_user_path(current_user),class:"Side__header--box_logo-btn Side__header--box_logo-btn_cog "do
           =icon('fas', 'cog')
   .Side__group
-    .Side__group__list
-      - current_user.groups.each do |group|
-        = link_to group_messages_path(group) do
-          .groupname
-            = group.name
-          .latest-message 
-            = group.show_last_message
+    .Side__group__box
+      .Side__group__box__list
+        - current_user.groups.each do |group|
+          = link_to group_messages_path(group) do
+            .groupname
+              = group.name
+            .latest-message 
+              = group.show_last_message
     
