--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -10,6 +10,7 @@
   height: 100vh;
   font-weight: bold;
   color: white;
+  overflow: scroll;
     &__header{
     height: 100px;
     display: flex;
@@ -38,6 +39,7 @@
       }
     }
     &__group{
+      &__box{
       &__list{
         text-decoration: none;
         height: 65px;
@@ -54,6 +56,7 @@
           color: #ffffff;
         }
       }
+    }
     }
   }
 
@@ -99,6 +102,8 @@
       height: calc(100vh - 190px);
       background-color: #fafafa;
       padding: 35px 0px 40px 12px;
+      overflow: scroll;
+      &__chat{
         &__name{
             padding-bottom: 12px;
             color: #333333;
@@ -115,6 +120,7 @@
           font-size: 14px;
           margin-bottom: 46px;
         }
+      }
     }
 
     &__footer{
