--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,9 +1,10 @@
-.Main__main__name
-  = message.user.name
-  .date
-    = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-.Main__main__message
-  - if message.content.present?
-    %p.Main__main__message__content
-      = message.content
-  = image_tag message.image.url, class: 'Main__main_message__image' if message.image.present?
+.Main__main__chat
+  .Main__main__chat__name
+    = message.user.name
+    .date
+      = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+  .Main__main__chat__message
+    - if message.content.present?
+      %p.Main__main__chat__message__content
+        = message.content
+    = image_tag message.image.url, class: 'Main__main_message__image' if message.image.present?
