自動更新完了

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.Main__main__chat
+.Main__main__chat{data: {message: {id: message.id}}}
   .Main__main__chat__name
     = message.user.name
     .date
