--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -12,7 +12,7 @@
     .Side__group__box
       .Side__group__box__list
         - current_user.groups.each do |group|
-          = link_to group_messages_path(group) do
+          = link_to group_messages_path(group),class:"group" do
             .groupname
               = group.name
             .latest-message 
